# KinDA

./: .gitignore  .hgignore  LICENSE  README.md  __init__.py  kinda.py  options.py  pyproject.toml  scorecard.py  setup.py
case_studies/Fig10_Groves2016/: Groves2016_AND.pil  Groves2016_AND_ordered-complex.kinda  Groves2016_OR.pil  fig10_simulate_AND.py  fig10_simulate_OR.py  fig10d.py
case_studies/Fig67_Zhang2007/: Zhang2007_R.pil  Zhang2007_T.pil  fig6_simulate.py  fig6a.py  fig6bc.py  fig7_analyze.py  fig7_build_crns.py  fig7_plotter.py  fig7_simulate.py  fig7_timeout_check.py
case_studies/Fig8_MultipleFates/: MultipleFates-mod.pil  MultipleFates.pil  fig8_simulate.py  fig8d.py
case_studies/Fig9_Kotani2017/: README.md  kotani2017_F2.pil  kotani2017_F2_enum.pil  kotani2017_F2_onerxn.pil  kotani2017_F2_rxn_RpS2_to_e51.pil
enumeration/: __init__.py  enumeratejob.py
examples/: Zhang_etal_Science2007.pil  analyze.py  simple.pil
imports/: PyNupack.py  __init__.py  dnaobjectshome.py  kindahome.py  nupackhome.py  peppercornhome.py  pynupackhome.py
kinda/: __init__.py  input.py  kinda.py  options.py  output.py
kinda/enumeration/: __init__.py  enumeratejob.py
kinda/imports/: __init__.py  multistrandhome.py
kinda/nupack/: PyNupack.py  __init__.py  nupack_wrapper.py
kinda/objects/: __init__.py  complex.py  dnaobjects.py  domain.py  io_Multistrand.py  io_PIL.py  io_Peppercorn.py  macrostate.py  reaction.py  restingset.py  sequence.py  strand.py  structure.py  utils.py
kinda/simulation/: __init__.py  multistrandjob.py  nupackjob.py  sim_utils.py
kinda/statistics/: __init__.py  stats.py  stats_utils.py
kinda/tests/fates/: analyze.py
kinda/tests/fates/NUPACK1/: multifates2_nupack.pil
kinda/tests/fates/NUPACK_Fate2/: nupack_design_code  (+1 more)
kinda/tests/simple/: simple.pil
kinda/tests/surface_crns/: scrn_bimolecular.pil  scrn_unimolecular.pil
kinda/tests/zhangcatalyst/: zhangcatalyst.pil
objects/: __init__.py  complex.py  constraints.py  dnaobjects.py  domain.py  input_PIL.py  io_Multistrand.py  io_PIL.py  io_Peppercorn.py  output_Multistrand.py  output_Peppercorn.py  reaction.py  restingset.py  strand.py  structure.py  utils.py
objects/imports/: __init__.py
scripts/: KinDA  kinda.def
simulation/: __init__.py  datablock.py  multistrandjob.py  nupackjob.py  options.py  sim_utils.py
src/kinda/: __init__.py  input.py  kinda.py  options.py  output.py
src/kinda/enumeration/: enumeratejob.py
src/kinda/objects/: complex.py  domain.py  io_KinDA.py  io_Multistrand.py  io_Peppercorn.py  macrostate.py  reaction.py  restingset.py  sequence.py  strand.py  structure.py  utils.py
src/kinda/scripts/: KinDA.py
src/kinda/simulation/: multistrandjob.py  nupackjob.py  sim_utils.py
src/kinda/statistics/: stats.py  stats_utils.py
statistics/: __init__.py  stats.py  stats_utils.py
tests/: analyze.py
tests/fates/: multifates.pil  multifates2.pil  multifates3_nupack.pil  multifates4_nupack.pil
tests/fates/NUPACK_Fate2/: designed_structure.pil  multifates_fate1=fate2.pil  structure_fate1.pil  structure_fate1=fate2.pil
tests/fates/RANDOM/: multifates3.pil  multifates4.pil
tests/oscillator/: analyze.py  oscillator_james0.pil  oscillator_james1.pil
tests/surface_crns/: scrn_bimolecular.pil
tests/zhangcatalyst/: analyze_dna21.py  analyze_zhangcatalyst.py  zhangcatalyst_left.pil  zhangcatalyst_right.pil
(+1 files in other folders)
