[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'kinda'
version = '0.3'
description = 'Kinetic DNA strand-displacement Analyzer'
authors = [{name = "Joseph Berleant"}, {name = "Chris Berlind"},
           {name = "Stefan Badelt"}, {name = "Frits Dannenberg"},
           {name = "Joseph Schaeffer"},
           {name = "Erik Winfree", email = "winfree@caltech.edu"}]
maintainers = [{name = "Boyan Beronov", email = "beronov@cs.ubc.ca"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.10"
dependencies = [
    "multistrand >= 2.2",
    "peppercornenumerator >= 1.1.1",
    "crnsimulator >= 0.9",
    "multiprocess >= 0.70.15",
    "numpy >= 1.24",
    "matplotlib",
]

[project.scripts]
KinDA = "kinda.scripts.KinDA:cli_main"

[project.urls]
Home = "https://github.com/DNA-and-Natural-Algorithms-Group/KinDA"

[[tool.uv.index]]
name = "nupack"
format = "flat"
explicit = true
url = "../nupack-4.0.2.0/package"

[tool.uv.sources.nupack]
index = "nupack"

[tool.uv.sources.multistrand]
git = "https://github.com/DNA-and-Natural-Algorithms-Group/multistrand"
branch = "development-2.2"
